@@ -1,3 +1,13 @@
+2007-02-10  Roman Kennke  <kennke@aicas.com>
+
+	* java/awt/GraphicsConfiguration.java
+	(createCompatibleVolatileImage(int,int,ImageCapabilities): Provide
+	default implementation that delegates to
+	createCompatibleVolatileImage(int,int).
+	(createCompatibleVolatileImage(int,int,ImageCapabilities,int):
+	New method from JDK5 spec. Default implementation by delegating to
+	(createCompatibleVolatileImage(int,int,int).
+
 2007-02-09  Tom Tromey  <tromey@redhat.com>
 
 	PR libgcj/30647:
